fix after review

--- a/index.html
+++ b/index.html
@@ -10,61 +10,64 @@
 <header class="header page__section">
     <div class="logo"></div>
 </header>
-<section class="profile page__section">
-    <div class="profile__avatar">
-        <img class="profile__image profile__avatar" src="images/profile/__avatar/Cousteau.png" alt="Жак-Ив Кусто">
-        <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button type="button" class="button button_type_edit profile__edit-button"></button>
-            <p class="profile__subtitle">Исследователь океана</p>
+<main class="page__section">
+    <section class="profile">
+        <div class="profile__avatar">
+            <img class="profile__image profile__avatar" src="images/profile/__avatar/Cousteau.png" alt="Жак-Ив Кусто">
+            <div class="profile__info">
+                <h1 class="profile__title">Жак-Ив Кусто</h1>
+                <button type="button" class="button button_type_edit profile__edit-button"></button>
+                <p class="profile__subtitle">Исследователь океана</p>
+            </div>
         </div>
-    </div>
-    <button type="button" class="button button_type_add"></button>
-</section>
-<section class="places">
-    <div class="place">
-        <img class="place__image" src="images/place/karachaevsk.png" alt="Карачаевск">
-        <div class="place__title-like">
-            <h2 class="place__title">Карачаевск</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <button type="button" class="button button_type_add"></button>
+    </section>
+    <section class="places">
+        <div class="place">
+            <img class="place__image" src="images/place/karachaevsk.png" alt="Карачаевск">
+            <div class="place__title-like">
+                <h2 class="place__title">Карачаевск</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-    <div class="place">
-        <img class="place__image" src="images/place/elbrus.png" alt="Эльбрус">
-        <div class="place__title-like">
-            <h2 class="place__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <div class="place">
+            <img class="place__image" src="images/place/elbrus.png" alt="Эльбрус">
+            <div class="place__title-like">
+                <h2 class="place__title">Гора Эльбрус</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-    <div class="place">
-        <img class="place__image" src="images/place/dombai.png" alt="Домбай">
-        <div class="place__title-like">
-            <h2 class="place__title">Домбай</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <div class="place">
+            <img class="place__image" src="images/place/dombai.png" alt="Домбай">
+            <div class="place__title-like">
+                <h2 class="place__title">Домбай</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-    <div class="place">
-        <img class="place__image" src="images/place/elbrus.png" alt="Гора Эльбрус">
-        <div class="place__title-like">
-            <h2 class="place__title">Гора Эльбрус</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <div class="place">
+            <img class="place__image" src="images/place/elbrus.png" alt="Гора Эльбрус">
+            <div class="place__title-like">
+                <h2 class="place__title">Гора Эльбрус</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-    <div class="place">
-        <img class="place__image" src="images/place/dombai.png" alt="Домбай">
-        <div class="place__title-like">
-            <h2 class="place__title">Домбай</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <div class="place">
+            <img class="place__image" src="images/place/dombai.png" alt="Домбай">
+            <div class="place__title-like">
+                <h2 class="place__title">Домбай</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-    <div class="place">
-        <img class="place__image" src="images/place/karachaevsk-small.png" alt="Карачаевск">
-        <div class="place__title-like">
-            <h2 class="place__title">Карачаево-Черкесия</h2>
-            <button type="button" class="button button_type_like" aria-label="like"></button>
+        <div class="place">
+            <img class="place__image" src="images/place/karachaevsk-small.png" alt="Карачаевск">
+            <div class="place__title-like">
+                <h2 class="place__title">Карачаево-Черкесия</h2>
+                <button type="button" class="button button_type_like" aria-label="like"></button>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</main>
+
 <footer class="footer page__section">
     <p class="footer__text">&#169; 2020 Mesto Russia</p>
 </footer>
@@ -83,7 +86,7 @@
                 <button type="submit" class="button button_type_save">Сохранить</button>
             </fieldset>
         </form>
-        <button type="button" class="button button__type_close"></button>
+        <button type="button" class="button button_type_close"></button>
     </div>
 </div>
 </body>
