feat: add functionality to UI, finished tasks 1-8

--- a/index.html
+++ b/index.html
@@ -16,55 +16,25 @@
             <img class="profile__image profile__avatar" src="images/profile/__avatar/Cousteau.png" alt="Жак-Ив Кусто">
             <div class="profile__info">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button type="button" class="button button_type_edit profile__edit-button"></button>
+                <button type="button" class="button button__edit profile__edit-button"></button>
                 <p class="profile__subtitle">Исследователь океана</p>
             </div>
         </div>
-        <button type="button" class="button button_type_add"></button>
+        <button type="button" class="button button__add"></button>
     </section>
     <section class="places">
-        <div class="place">
-            <img class="place__image" src="images/place/karachaevsk.png" alt="Карачаевск">
-            <div class="place__title-like">
-                <h2 class="place__title">Карачаевск</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
+        <template id="place-card">
+            <div class="place">
+                <button class="button button__remove"></button>
+                <a class="place__image-link">
+                    <img class="place__image" src="" alt="">
+                </a>
+                <div class="place__title-like">
+                    <h2 class="place__title"></h2>
+                    <button type="button" class="button button__like" aria-label="like"></button>
+                </div>
             </div>
-        </div>
-        <div class="place">
-            <img class="place__image" src="images/place/elbrus.png" alt="Эльбрус">
-            <div class="place__title-like">
-                <h2 class="place__title">Гора Эльбрус</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
-            </div>
-        </div>
-        <div class="place">
-            <img class="place__image" src="images/place/dombai.png" alt="Домбай">
-            <div class="place__title-like">
-                <h2 class="place__title">Домбай</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
-            </div>
-        </div>
-        <div class="place">
-            <img class="place__image" src="images/place/elbrus.png" alt="Гора Эльбрус">
-            <div class="place__title-like">
-                <h2 class="place__title">Гора Эльбрус</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
-            </div>
-        </div>
-        <div class="place">
-            <img class="place__image" src="images/place/dombai.png" alt="Домбай">
-            <div class="place__title-like">
-                <h2 class="place__title">Домбай</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
-            </div>
-        </div>
-        <div class="place">
-            <img class="place__image" src="images/place/karachaevsk-small.png" alt="Карачаевск">
-            <div class="place__title-like">
-                <h2 class="place__title">Карачаево-Черкесия</h2>
-                <button type="button" class="button button_type_like" aria-label="like"></button>
-            </div>
-        </div>
+        </template>
     </section>
 </main>
 
@@ -72,22 +42,31 @@
     <p class="footer__text">&#169; 2020 Mesto Russia</p>
 </footer>
 
-<div class="popup">
+
+<div class="popup popup_form">
     <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>
         <form name="profile" class="popup__form">
             <fieldset class="popup__form-name">
                 <label class="popup__label">
-                    <input name="fullname" class="popup__input" type="text" placeholder="Полное имя" required>
+                    <input name="firstFormInput" class="popup__input" type="text" required>
                 </label>
                 <label class="popup__label">
-                    <input name="profession" class="popup__input" type="text" placeholder="Профессия" required>
+                    <input name="secondFormInput" class="popup__input" type="text" required>
                 </label>
-                <button type="submit" class="button button_type_save">Сохранить</button>
+                <button type="submit" class="button button__save">Сохранить</button>
             </fieldset>
         </form>
-        <button type="button" class="button button_type_close"></button>
+        <button type="button" class="button button__close"></button>
     </div>
 </div>
+<div class="popup popup_opaque popup_image">
+    <figure class="popup__figure">
+        <img class="popup__image" src="#" alt="#">
+        <figcaption class="popup__image-caption">default caption</figcaption>
+        <button type="button" class="button button__close"></button>
+    </figure>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
