--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Место</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/jpg" href="<%=require('./images/yandex_icon.png')%>"/>
 </head>
 <body class="page">
 <header class="header page__section">
