--- a/index.html
+++ b/index.html
@@ -1,72 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Место</title>
-    <link href="./pages/index.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body class="page">
-<header class="header page__section">
-    <div class="logo"></div>
-</header>
-<main class="page__section">
-    <section class="profile">
-        <div class="profile__avatar">
-            <img class="profile__image profile__avatar" src="images/profile/__avatar/Cousteau.png" alt="Жак-Ив Кусто">
-            <div class="profile__info">
-                <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button type="button" class="button button__edit profile__edit-button"></button>
-                <p class="profile__subtitle">Исследователь океана</p>
-            </div>
-        </div>
-        <button type="button" class="button button__add"></button>
-    </section>
-    <section class="places">
-        <template id="place-card">
-            <div class="place">
-                <button class="button button__remove"></button>
-                <a class="place__image-link">
-                    <img class="place__image" src="" alt="">
-                </a>
-                <div class="place__title-like">
-                    <h2 class="place__title"></h2>
-                    <button type="button" class="button button__like" aria-label="like"></button>
-                </div>
-            </div>
-        </template>
-    </section>
-</main>
-
-<footer class="footer page__section">
-    <p class="footer__text">&#169; 2020 Mesto Russia</p>
-</footer>
-
-
-<div class="popup popup_form">
-    <div class="popup__container">
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <form name="profile" class="popup__form">
-            <fieldset class="popup__form-name">
-                <label class="popup__label">
-                    <input name="firstFormInput" class="popup__input" type="text" required>
-                </label>
-                <label class="popup__label">
-                    <input name="secondFormInput" class="popup__input" type="text" required>
-                </label>
-                <button type="submit" class="button button__save">Сохранить</button>
-            </fieldset>
-        </form>
-        <button type="button" class="button button__close"></button>
-    </div>
-</div>
-<div class="popup popup_opaque popup_image">
-    <figure class="popup__figure">
-        <img class="popup__image" src="#" alt="#">
-        <figcaption class="popup__image-caption">default caption</figcaption>
-        <button type="button" class="button button__close"></button>
-    </figure>
-</div>
-<script src="script.js"></script>
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><title>Место</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" type="image/jpg" href="79e9727f2be925ee3a77.png"/><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body class="page"><header class="header page__section"><div class="logo"></div></header><main class="page__section"><section class="profile"><div class="profile__avatar"><a class="profile__image-overlay"><img class="profile__image" src="9d6adefb1210b21ebdf8.png" alt="Жак-Ив Кусто"></a><div class="profile__info"><h1 class="profile__title">Жак-Ив Кусто</h1><button type="button" class="button button__edit profile__edit-button"></button><p class="profile__subtitle">Исследователь океана</p></div></div><button type="button" class="button button__add"></button></section><section class="places"><template id="place-card"><div class="place"><button class="button button__remove"></button> <a class="place__image-link"><img class="place__image" src="" alt=""></a><div class="place__title-like"><h2 class="place__title"></h2><div><button type="button" class="button button__like" aria-label="like"></button><p class="place__like-count"></p></div></div></div></template></section></main><footer class="footer page__section"><p class="footer__text">&#169; 2020 Mesto Russia</p></footer><div class="popup popup_type_profile"><div class="popup__container"><h3 class="popup__title">Редактировать профиль</h3><form name="profile" class="popup__form" novalidate><fieldset class="popup__form-name"><label class="popup__label"><input name="firstFormInput" class="popup__input" id="name-input" placeholder="Полное имя" minlength="2" maxlength="40" required> <span class="popup__input-error name-input-error"></span></label> <label class="popup__label"><input name="secondFormInput" class="popup__input" id="profession-input" placeholder="Профессия" minlength="2" maxlength="200" required> <span class="popup__input-error profession-input-error"></span></label> <button type="submit" class="button button__save">Сохранить</button></fieldset></form><button type="button" class="button button__close"></button></div></div><div class="popup popup_type_card"><div class="popup__container"><h3 class="popup__title">Новое место</h3><form name="profile" class="popup__form" novalidate><fieldset class="popup__form-name"><label class="popup__label"><input name="firstFormInput" class="popup__input" id="place-name-input" placeholder="Название" minlength="2" maxlength="30" required> <span class="popup__input-error place-name-input-error"></span></label> <label class="popup__label"><input name="secondFormInput" class="popup__input" id="place-url-input" type="url" placeholder="Ссылка на карточку" required> <span class="popup__input-error place-url-input-error"></span></label> <button type="submit" class="button button__save">Создать</button></fieldset></form><button type="button" class="button button__close"></button></div></div><div class="popup popup_type_avatar"><div class="popup__container"><h3 class="popup__title">Обновить аватар</h3><form name="profile" class="popup__form" novalidate><fieldset class="popup__form-name"><label class="popup__label"><input name="firstFormInput" class="popup__input" id="avatar-link-input" type="url" placeholder="ссылка на аватар" required> <span class="popup__input-error avatar-link-input-error"></span></label> <button type="submit" class="button button__save">Сохранить</button></fieldset></form><button type="button" class="button button__close"></button></div></div><div class="popup popup_opaque popup_type_image"><figure class="popup__figure"><img class="popup__image" src="#" alt="#"><figcaption class="popup__image-caption">default caption</figcaption><button type="button" class="button button__close"></button></figure></div></body></html>
