fix: fix after review

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 <div class="popup popup_type_profile">
     <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form name="profile" class="popup__form" novalidate>
+        <form name="profile" class="popup__form" novalidate autocomplete="off">
             <fieldset class="popup__form-name">
                 <label class="popup__label">
                     <input name="firstFormInput" class="popup__input" id="name-input" type="text" placeholder="Полное имя" minlength="2" maxlength="40" required>
@@ -71,7 +71,7 @@
 <div class="popup popup_type_card">
     <div class="popup__container">
         <h3 class="popup__title">Новое место</h3>
-        <form name="profile" class="popup__form" novalidate>
+        <form name="profile" class="popup__form" novalidate autocomplete="off">
             <fieldset class="popup__form-name">
                 <label class="popup__label">
                     <input name="firstFormInput" class="popup__input" id="place-name-input" type="text" placeholder="Название" minlength="2" maxlength="30" required>
@@ -90,7 +90,7 @@
 <div class="popup popup_type_avatar">
     <div class="popup__container">
         <h3 class="popup__title">Обновить аватар</h3>
-        <form name="profile" class="popup__form" novalidate>
+        <form name="profile" class="popup__form" novalidate autocomplete="off">
             <fieldset class="popup__form-name">
                 <label class="popup__label">
                     <input name="firstFormInput" class="popup__input" id="avatar-link-input" type="url" placeholder="ссылка на аватар" required>
